k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: workout-tracker
spec:
  selector:
    app: frontend
  ports:
    - port: 80
